<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favourite" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/contact" />
    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:title="@string/share"
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"/>
            <item
                android:title="@string/send"
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send_black_24dp"/>
        </menu>
    </item>
</menu>